objects/ssot__LearningCourse__dlm.object
<CustomObject>
    <fields>
        <fullName>ssot__AcademicLevel__c</fullName>
        <label>Academic Level</label>
        <length>15</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ssot__ActiveFromDate__c</fullName>
        <label>Active From Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>ssot__ActiveToDate__c</fullName>
        <label>Active To Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>ssot__CipCodeText__c</fullName>
        <label>Cip Code</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ssot__CourseLevelDescription__c</fullName>
        <label>Course Level Description</label>
        <length>15</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ssot__CourseNumberText__c</fullName>
        <label>Course Number</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ssot__DataSourceId__c</fullName>
        <label>Data Source</label>
        <length>60</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ssot__DataSourceObjectId__c</fullName>
        <label>Data Source Object</label>
        <length>60</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ssot__Description__c</fullName>
        <label>Description</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ssot__DurationNumber__c</fullName>
        <label>Duration</label>
        <precision>18</precision>
        <scale>3</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>ssot__DurationUnit__c</fullName>
        <label>Duration Unit</label>
        <length>15</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ssot__FieldOfStudy__c</fullName>
        <label>Field of Study</label>
        <length>15</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ssot__Id__c</fullName>
        <label>Learning Course Id</label>
        <length>15</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ssot__InternalOrganizationId__c</fullName>
        <label>Internal Organization</label>
        <length>60</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ssot__IsActive__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Is Active</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>ssot__LearningId__c</fullName>
        <label>Learning</label>
        <length>15</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ssot__Name__c</fullName>
        <label>Name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ssot__ProviderId__c</fullName>
        <label>Provider</label>
        <length>15</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ssot__SubjectAbbreviationText__c</fullName>
        <label>Subject Abbreviation</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ssot__rel_1719817710215_end__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>LearningCourse_ProviderId_map_Accoun_rel</label>
        <referenceTo>ssot__Account__dlm</referenceTo>
        <relationshipLabel>LearningCourse_ProviderId_map_Accoun_rel</relationshipLabel>
        <relationshipName>rel_1719817710215_end</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>ssot__rel_1719819884205_end__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>LearningCourse_LearningId_map_Learni_rel</label>
        <referenceTo>ssot__Learning__dlm</referenceTo>
        <relationshipLabel>LearningCourse_LearningId_map_Learni_rel</relationshipLabel>
        <relationshipName>rel_1719819884205_end</relationshipName>
        <type>Lookup</type>
    </fields>
</CustomObject>